fix bug introduced in 2.1.5 footer misalignment

--- a/style.css
+++ b/style.css
@@ -412,6 +412,8 @@ caption { background: #ffc; }
 #footer ul{
 	float: right;
 	list-style-type: none;
+	margin: 0;
+	padding: 0;
 	text-align: right;
 	width: 40%;
 }
